test/bad/classes/print05.px

class A def
    Int x

"{A()}"
